--- a/main.html
+++ b/main.html
@@ -10,7 +10,61 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<form method="get">
+		<!--Name-->
+		<div>
+			<label for="name">Name</label>
+			<input type="text" id="name" name="name" required>
+		</div>
+		<br>
+		<!--Email-->
+		<div>
+			<label for="email">Email</label>
+			<input type="email" id="email" name="email" required>
+		</div>
+		<br>
+		<!--Gender-->
+		<div>
+			<label for="gender">Gender:</label>
+			<input type="radio" id="gender" name="gender" required>
+			<label for="gender">Male</label>
+			<input type="radio" id="gender" name="gender" required>
+			<label for="gender">Female</label>
+		</div>
+		<br>
+		<!--Laptop-->
+		<div>
+			<label for="laptop">Laptop</label>
+			<select name="laptop" id="laptop">
+				<option value="Apple">Apple</option>
+				<option value="Asus">Asus</option>
+				<option value="HP">HP</option>
+			</select>
+		</div>
+		<br>
+		<!--Age-->
+		<div>
+			<label for="age">Age</label>
+			<input type="number" id="age" name="age" required>
+		</div>
+		<br>
+		<!--DOB-->
+		<div>
+			<label for="dob">Date Of Birth</label>
+			<input type="date" id="dob" name="dob" required>
+		</div>
+		<br>
+		<!--Password-->
+		<div>
+			<label for="password">Password</label>
+			<input type="password" id="password" name="password" required>
+		</div>
+		<br>
+		<!--Submit-->
+		<div>
+			<input type="submit" value="Submit">
+		</div>
+	</form>
 </body>
 
 </html>
