--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
 		<br>
 		<!--Submit-->
 		<div>
-			<input type="submit" value="Submit">
+			<button type="submit">Submit</button>
 		</div>
 	</form>
 </body>
