--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form method="get">
+	<form method="post">
 		<!--Name-->
 		<div>
 			<label for="name">Name</label>
@@ -25,7 +25,7 @@
 		<br>
 		<!--Gender-->
 		<div>
-			<label for="gender">Gender:</label>
+			<label for="gender">Gender</label>
 			<input type="radio" id="gender" name="gender" required>
 			<label for="gender">Male</label>
 			<input type="radio" id="gender" name="gender" required>
