--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 		<!--Laptop-->
 		<div>
 			<label for="laptop">Laptop</label>
-			<select name="laptop" id="laptop">
+			<select name="laptop" id="laptop" required>
 				<option value="Apple">Apple</option>
 				<option value="Asus">Asus</option>
 				<option value="HP">HP</option>
